[project]
name = "shipping_cost"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.19",
    "dagster-duckdb>=0.28.19",
    "duckdb>=1.5.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "shipping_cost"
registry_modules = [
    "shipping_cost.components.*",
]


